apps/main/gitlab/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    # Using traefik for this namespace
    istio-injection: disabled
